--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@wisegar-org/wgo-pdf-printer",
+  "name": "@wisegar-org/wgo-pdf-tools",
+  "private": true,
   "version": "0.0.1-build.1",
-  "description": "Wisegar Printing Module",
+  "description": "Wisegar PDF printing tools Module",
   "main": "build/index.js",
   "scripts": {
     "start": "nodemon",
@@ -25,17 +26,17 @@
   },
   "homepage": "https://github.com/wisegar-org/wgo-pdf-printer#readme",
   "devDependencies": {
-    "@types/fs-extra": "9.0.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "17.0.21",
-    "jest": "27.5.1",
-    "nodemon": "2.0.15",
-    "ts-jest": "27.1.3",
-    "typescript": "4.6.2"
+    "@types/fs-extra": "11.0.4",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.14.1",
+    "jest": "29.7.0",
+    "nodemon": "3.1.9",
+    "ts-jest": "29.3.2",
+    "typescript": "5.8.3"
   },
   "dependencies": {
-    "fs-extra": "10.0.1",
-    "puppeteer": "13.5.1",
-    "stream": "0.0.2"
+    "fs-extra": "11.3.0",
+    "puppeteer": "24.6.1",
+    "stream": "0.0.3"
   }
 }
