Update Readme file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wisegar-org/wgo-pdf-printer.git"
+    "url": "git+https://github.com/wisegar-org/wgo-pdf-tools.git"
   },
   "keywords": [
     "Wisegar.org",
@@ -22,9 +22,9 @@
   "author": "Wisegar.org",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/wisegar-org/wgo-pdf-printer/issues"
+    "url": "https://github.com/wisegar-org/wgo-pdf-tools/issues"
   },
-  "homepage": "https://github.com/wisegar-org/wgo-pdf-printer#readme",
+  "homepage": "https://github.com/wisegar-org/wgo-pdf-tools#readme",
   "devDependencies": {
     "@types/fs-extra": "11.0.4",
     "@types/jest": "29.5.14",
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "fs-extra": "11.3.0",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "24.6.1",
     "stream": "0.0.3"
   }
