--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wisegar-org/wgo-pdf-tools",
+  "name": "wgo-pdf-tools",
   "private": true,
   "version": "0.0.1-build.1",
   "description": "Wisegar PDF printing tools Module",
@@ -15,12 +15,11 @@
     "url": "git+https://github.com/wisegar-org/wgo-pdf-tools.git"
   },
   "keywords": [
-    "Wisegar.org",
-    "Electronic",
-    "Printing"
+    "wisegar.org",
+    "pdf tools"
   ],
-  "author": "Wisegar.org",
-  "license": "ISC",
+  "author": "Wisegar Development Group <info@wisegar.org>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wisegar-org/wgo-pdf-tools/issues"
   },
@@ -32,6 +31,7 @@
     "jest": "29.7.0",
     "nodemon": "3.1.9",
     "ts-jest": "29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.8.3"
   },
   "dependencies": {
@@ -39,5 +39,14 @@
     "pdf-lib": "^1.17.1",
     "puppeteer": "24.6.1",
     "stream": "0.0.3"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src",
+      "tests"
+    ],
+    "ext": ".ts",
+    "ignore": [],
+    "exec": "node --inspect=9240 -r ts-node/register ./src/index.ts"
   }
 }
