--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/wisegar-org/wgo-pdf-tools#readme",
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/fs-extra": "11.0.4",
     "@types/jest": "29.5.14",
     "@types/node": "22.14.1",
@@ -34,6 +35,7 @@
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "fs-extra": "11.3.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "24.6.1",
