--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "bugs": {
     "url": "https://github.com/wisegar-org/wgo-pdf-tools/issues"
   },
+  "files": [
+    "build"
+  ],
   "homepage": "https://github.com/wisegar-org/wgo-pdf-tools#readme",
   "devDependencies": {
     "@types/archiver": "^6.0.3",
